--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile Card</title>
+    <title>Anna's Profile Card</title>
 </head>
 <body>
-    <!-- Content goes here -->
+    <h1>Anna Baker</h1>
+    <h2>Software Engineer</h2>
+    <p>Passionate developer with experience in building scalable web applications. Loves open source and learning new technologies.</p>
 </body>
 </html>
