--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Anna Baker</h1>
-    <h2>Software Engineer</h2>
-    <p>Passionate developer with experience in building scalable web applications. Loves open source and learning new technologies.</p>
+    <div class="card">
+        <h1>Anna Baker</h1>
+        <h2>Software Engineer</h2>
+        <p>Passionate developer with experience in building scalable web applications. Loves open source and learning new technologies.</p>
+    </div>
 </body>
 </html>
