--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
         <h1>Anna Baker</h1>
         <h2>Software Engineer</h2>
         <p>Passionate developer with experience in building scalable web applications. Loves open source and learning new technologies.</p>
+        <h3>My Favorite Websites</h3>
+        <ul>
+            <li><a href="https://github.com/">GitHub</a></li>
+            <li><a href="https://stackoverflow.com/">Stack Overflow</a></li>
+            <li><a href="https://developer.mozilla.org/">MDN Web Docs</a></li>
+            <li><a href="https://news.ycombinator.com/">Hacker News</a></li>
+        </ul>
     </div>
 </body>
 </html>
