--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <p>Passionate developer with experience in building scalable web applications. Loves open source and learning new technologies.</p>
         <h3>My Favorite Websites</h3>
         <ul>
-            <li><a href="https://github.com/">GitHub</a></li>
-            <li><a href="https://stackoverflow.com/">Stack Overflow</a></li>
-            <li><a href="https://developer.mozilla.org/">MDN Web Docs</a></li>
-            <li><a href="https://news.ycombinator.com/">Hacker News</a></li>
+            <li><a href="https://www.youtube.com/">YouTube</a></li>
+            <li><a href="https://www.fandom.com/">Fandom</a></li>
+            <li><a href="https://www.coolmathgames.com/c/papas-games">CoolMathGames</a></li>
+            <li><a href="https://login.globalcareeraccelerator.org/">Global Career Accelerator HQ</a></li>
         </ul>
     </div>
 </body>
