Added picture of me and changed bio. Also removed bullet points from favorite website links.

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <div class="card">
+        <img src="img/Me.jpg" alt="Anna Baker" style="width:120px; border-radius:50%; margin-bottom:20px;">
         <h1>Anna Baker</h1>
-        <h2>Software Engineer</h2>
-        <p>Passionate developer with experience in building scalable web applications. Loves open source and learning new technologies.</p>
+        <h2>Computer Science | Student</h2>
+        <p>Passionate computer science student attending University of Louisville's J.B. Speed School of Engineering. Loves video games and learning new technologies.</p>
         <h3>My Favorite Websites</h3>
         <ul>
             <li><a href="https://www.youtube.com/">YouTube</a></li>
